...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:baselineAligned="false">

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:onClick="anhadirVehiculo"
                app:srcCompat="@android:drawable/ic_input_add" />

...
            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swiperefresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ListView
                    android:id="@+id/listViewVehiculos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        </LinearLayout>

...
