<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:showAsAction="always">

    <!-- opcion para refrescar los datos -->
    <item
        android:id="@+id/itemActualizar"
        android:title="@string/menuActualizar" />

    <!-- opcion para mostrar informacion -->
    <item
        android:id="@+id/itemInfo"
        android:title="@string/menuInfo" />

    <!-- opcion para mostrar informacion -->
    <item
        android:id="@+id/itemVehiculos"
        android:title="Vehiculos" />
</menu>